Fixed a typo that caused open graph not to work

--- a/src/templates/partials/home.html
+++ b/src/templates/partials/home.html
@@ -4,13 +4,12 @@
 
 {% block title %}OverTaxed | Home{% endblock %}
 
-{% block head_extra %}
+{% block head_extras %}
 
   <meta property="og:title" content="OverTaxed Home"/>
   <meta property="og:description" content="Try my tax calculators for federal and state taxes!"/>
   <meta property="og:url" content="https://overtaxedonline.com"/>
   <meta property="og:image" content="https://overtaxedonline.com{% static 'graphics/home_preview.png' %}"/>
-
 
 {% endblock %}
 
