Updated homepage static graphic

--- a/src/templates/partials/federal-calc-mockup.html
+++ b/src/templates/partials/federal-calc-mockup.html
@@ -20,7 +20,7 @@
               type="number"
               class="input input-bordered w-full"
               placeholder="Enter your income"
-              value="75000"
+              value="95000"
               disabled>
         </div>
         <p class="text-gray-500" style="font-size: small">
@@ -64,18 +64,6 @@
           </select>
         </div>
 
-        <!-- Hardcoded Deductions -->
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Deductions ($)</span>
-          </label>
-          <input
-              type="number"
-              class="input input-bordered w-full"
-              placeholder="Enter deductions"
-              value="8000"
-              disabled>
-        </div>
       </form>
     </div>
 
@@ -99,17 +87,15 @@
         <div class="collapse-content">
           <p style="text-decoration: underline; font-weight: 500">Taxable Income</p>
           <p class="flex justify-between">Gross Income <strong>$95,000</strong></p>
-          <p class="ms-2 flex justify-between">Standard Deduction <strong>-$12,000</strong></p>
-          <p class="ms-2 flex justify-between">Other Deductions <strong>-$8,000</strong></p>
-          <p class="ms-2 flex justify-between">Non-taxable income <strong>-$1,530</strong></p>
+          <p class="ms-2 flex justify-between">Standard Deduction <strong>-$14,600</strong></p>
           <hr class="my-2">
-          <p class="flex justify-between mb-4">Taxable Income <strong>$73,470</strong></p>
+          <p class="flex justify-between mb-4">Taxable Income <strong>$78,400</strong></p>
 
-          <p style="text-decoration: underline; font-weight: 500">Estimated federal taxes</p>
-          <p class="flex justify-between">Taxes before adjustments <strong>$10,300</strong></p>
-          <p class="flex justify-between">Self-employment Tax <strong>$2,150</strong></p>
+          <p style="font-weight: 600; font-size: 17px">Adjustments</p>
+          <p class="flex justify-between ms-2">Federal Income Tax<strong>$12,450</strong></p>
           <hr class="my-2">
-          <p class="flex justify-between">Taxes Owed <strong>$12,450</strong></p>
+          <p class="flex justify-between ms-2">Total Tax<strong>$12,450</strong></p>
+
         </div>
       </div>
     </div>
