Enhance layout consistency for state calculator and results
Improved padding and spacing for elements in state calculator and results pages for better responsiveness. Added "table-auto" class to enhance table styling, ensuring consistent presentation across devices.

--- a/src/templates/pages/state/state-calculator.html
+++ b/src/templates/pages/state/state-calculator.html
@@ -2,7 +2,7 @@
 {% block title %}State Tax Calculator{% endblock %}
 {% block content %}
 
-  <div class="card bg-base-200 shadow-xl p-6 mx-2 md:mx-auto max-w-5xl">
+  <div class="card bg-base-200 shadow-xl p-2 py-3 sm:p-6 mx-2 md:mx-auto max-w-5xl">
     <div class="flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
            class="me-2 size-6">
