--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -3,17 +3,46 @@
 <!-- Navbar for medium and larger devices -->
 <nav class="navbar bg-base-200 shadow-md px-4 hidden md:flex">
   <div class="flex-1">
-    <a href="/" class="text-xl font-bold">
+    <a href="/">
       <img src="{% static 'graphics/overtaxed_color.svg' %}" style="height: 1.5em">
-
-      {#      OverTaxed#}
     </a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
-      <li><a href="/">Home</a></li>
       <li><a href="{% url 'federal_calculator' %}">Federal Tax Calculator</a></li>
       <li><a href="{% url 'state_calculator' %}">State Tax Calculator</a></li>
+      {% if user.is_authenticated %}
+        {#        <li class="hover:text-primary transition-colors duration-100">#}
+        {#          <a type="submit" href="/">#}
+        {#            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"#}
+        {#                 stroke="currentColor"#}
+        {#                 style="height: 1.5em">#}
+        {#              <path stroke-linecap="round" stroke-linejoin="round"#}
+        {#                    d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"></path>#}
+        {#            </svg>#}
+        {#          </a>#}
+        {#        </li>#}
+        <li class="hover:text-red-400 transition-colors duration-100">
+          <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button type="submit">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                   stroke="currentColor" style="height: 1.5em">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"></path>
+              </svg>
+            </button>
+          </form>
+        </li>
+      {% else %}
+        <li class="ms-2"><a href="{% url 'account_login' %}">Log In</a></li>
+        <li class="bg-primary hover:bg-indigo-450 transition-colors duration-200 ms-2" style="border-radius: 12px">
+          <a class="text-gray-950" href="{% url 'account_login' %}">Sign Up</a>
+        </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
@@ -42,13 +71,32 @@
         <li><a href="/">Home</a></li>
         <li><a href="{% url 'federal_calculator' %}">Federal Tax Calculator</a></li>
         <li><a href="{% url 'state_calculator' %}">State Tax Calculator</a></li>
+        {% if user.is_authenticated %}
+          <li>
+            <form method="post" action="{% url 'account_logout' %}">
+              {% csrf_token %}
+              {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+              {% endif %}
+              <button type="submit" class="flex items-center gap-2">
+                Logout
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor" style="height: 1.5em">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"></path>
+                </svg>
+              </button>
+            </form>
+          </li>
+        {% else %}
+          <li><a href="{% url 'account_login' %}">Log In</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
   <div class="navbar-end">
-    <a class="btn btn-ghost text-xl">
-      <img src="{% static 'graphics/OT.svg' %}">
-      {#      OverTaxed#}
+    <a class="btn btn-ghost text-xl" href="/">
+      <img src="{% static 'graphics/OT.svg' %}" alt="Overtaxed Logo">
     </a>
   </div>
 </div>
