Update Google logo file

--- a/src/templates/account/login.html
+++ b/src/templates/account/login.html
@@ -23,7 +23,7 @@
       <div class="space-y-2 mb-8">
         <a href="{% provider_login_url 'google' %}"
             class="w-full btn btn-white btn-outline">
-          <img src="{% static 'graphics/google_icon.png' %}" alt="Google"
+          <img src="{% static 'graphics/google_logo.png' %}" alt="Google"
                class="h-5 w-5 mr-2">
           Log in with Google
         </a>
